--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title> Flora's Personal Page</title>
   </head>
   <body>
-    <h1>Coming Soon.</h1>
+    <h3>Hiya Mike, this is the picture I want to show you just now.</h3>
+    <img src="images/bread.jpeg" alt="bread">
   </body>
 </html>
