--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title> Flora's Personal Page</title>
   </head>
   <body>
-    <h3>Hiya Mike, this is the picture I want to show you just now.</h3>
-    <img src="images/bread.jpeg" alt="bread">
+    <h1>Coming soon.</h1>
   </body>
 </html>
